        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=12201
        Fix image dragging issues with http://www.carto.net/papers/svg/gui/scrollbar/index.svg

        Fix calculation of absolute transform so that viewport x,y
        translation is always done, also when viewBox is set.



Canonical link: https://commits.webkit.org/15772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18760 268f45cc-cd09-0410-ab3c-d52691b4dbfc